Docker setup (#4)
* changes for build success

* working command mvn clean package -DskipTests

* working end2end

* deleting version

* docker setup

---------

Co-authored-by: rchojn <rafalchojnacki0502@gmail.com>